@@ -1,3 +1,10 @@
+2004-01-06 MenTaLguY <mental@rydia.net>
+
+	* src/Makefile.am: removed monostd.h
+
+	* src/sp-item.cpp, src/uri-reference.h, src/uri-reference.cpp:
+	  redid URI reference stuff a bit
+
 2004-01-06 Nathan Hurst <njh@mail.csse.monash.edu.au>
 
 	* src/desktop-snap.{h,cpp} is now built using NR::Point.
